# invoice-agent-service

./: .env.example  .gitignore  LICENSE  README.md  add_auth_toggle.py  alembic.ini  auth-service.py  main.py  pyproject.toml  requirements.txt  reset_database.py  setup.py  test_tenant_creation.py  test_uuid_model.py
app/api/: router.py
app/api/routes/: __init__.py  auth.py  dev.py
app/core/: auth.py  config.py  security.py
app/db/: __init__.py  base.py  models.py  repositories.py  session.py
app/db/repositories/: integration_repository.py  tenant_repository.py  user_repository.py
app/integrations/: __init__.py  base.py  zoho.py
app/schemas/: auth.py  tenant.py  user.py
app/services/: auth_service.py
migrations/: env.py
migrations/versions/: c3192377533c_initial_schema.py
