[tool.poetry]
name = "invoice-agent-service"
version = "0.1.0"
description = "FastAPI service for invoice management with multi-tenant authentication"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
uvicorn = "0.23.2"
httpx = "0.25.0"
pydantic = {extras = ["email"], version = "^2.11.5"}
pydantic-settings = "2.0.3"
python-dotenv = "1.0.0"
cryptography = "41.0.4"
sqlalchemy = "2.0.22"
alembic = "1.12.0"
pymysql = "1.1.0"
python-jose = "3.3.0"
passlib = "1.7.4"
PyJWT = "2.9.0"
requests = "2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"
isort = "^5.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
